--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-graphics",
   "description": "Manage images",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "author": {
     "name": "Gabriel Bull",
     "email": "me@gabrielbull.com"
@@ -45,6 +45,8 @@
     "png"
   ],
   "files": [
-    "tasks"
+    "tasks",
+    "src",
+    "bin"
   ]
 }
