--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
-sudo: false
+before_install:
+  - sudo apt-get update
+  - sudo apt-get install imagemagick graphicsmagick
 language: node_js
 node_js:
-  - 'iojs'
-  - '0.12'
-  - '0.10'
+  - "0.10"
+  - "0.12"
+  - "iojs-v2"
+
